# setools

./: ChangeLog  ChangeLog-setools  Makefile  Makefile.am  README  TODO  configure.ac
apol/: Makefile  Makefile.am  analysis_tab.tcl  apol_help.html  common_widgets.tcl  cond_rules_tab.tcl  context_dialog.tcl  directflow_module.tcl  domaintrans_help.html  domaintrans_module.tcl  file_contexts_tab.tcl  file_relabel_help.html  file_relabel_module.tcl  html_viewer.tcl  infoflow_help.html  initial_sids_tab.tcl  mls_tab.tcl  open_policy_dialog.tcl  perms_map.tcl  polsearch_module.tcl  prefs.tcl  progress_dialog.tcl  relabel_module.tcl  terules_tab.tcl  top.tcl  transflow_module.tcl  types_relation_help.html  types_tab.tcl  users_tab.tcl
debian/: changelog  control  libsetools-java.install  rules
include/: Makefile.am
include/apol/: Makefile.am  avrule-query.h  bool-query.h  cond-simplify.h  constraint-query.h  mls-query.h  rbacrule-query.h  role-query.h  user-query.h
include/polsearch/: bool_query.hh  cat_query.hh  class_query.hh  common_query.hh  criterion.hh  level_query.hh  polsearch.hh  proof.hh  query.hh  range_parameter.hh  regex_parameter.hh  result.hh  role_query.hh  string_expression_parameter.hh  test.hh  type_query.hh
lib/: Makefile.am
libapol/: Makefile.am  apol_tcl.c  policy.c  util.c
libapol-tcl/: apol_tcl_other.c
libseaudit/: interface_parse.y  interface_scan.l  new_refpol.h  refpol-test.c  refpol.c  refpol.h  setools-test  setools.spt
man/: apol.1  findcon.1  replcon.1  seaudit-report.8  seaudit.8  sechecker.1  seinfo.1  sesearch.1
qpol-regression/: Makefile  bools_parser.pl  class_parser.pl  class_perms.h  genfscon_parser.pl  parse_cats.pl  qpol-test-common.h  qpol_avrule_test.c  qpol_booleans_test.c  qpol_class_perms_test.c  qpol_cond_test.c  qpol_constraint_test.c  qpol_context_test.c  qpol_contexts_test.c  qpol_fs_use_test.c  qpol_genfscons_test.c  qpol_isid_test.c  qpol_mls_test.c  qpol_mls_test.h  qpol_mlsrule_test.c  qpol_netifcons_test.c  qpol_nodecons_test.c  qpol_portcon_test.c  qpol_rbacrule_test.c  qpol_role_test.c  qpol_syn_rule_test.c  qpol_terule_test.c  qpol_test_lib.c  qpol_test_lib.h  qpol_types_test.c  qpol_user_test.c  qpol_wrapper.h  test.h  test_avrule.h  test_bools.h  test_genfscon.h  test_mls.h  test_types.h  types_parser.pl
regression/: Makefile  component-query-test.c  qpol-test-common.c  qpol_booleans_test.c  qpol_class_perms_test.c  qpol_genfscons_test.c  qpol_test_lib.c
seaudit/: Makefile  Makefile.am  auditlogmodel.c  auditlogmodel.h  filter_view.c  filter_view.h  filter_window.c  filter_window.h  message_view.c  message_view.h  modify_view.c  modify_view.h  policy_components_view.c  policy_components_view.h  policy_view.c  policy_view.h  preferences.c  preferences.h  preferences_view.c  preferences_view.h  progress.c  progress.h  report.c  report.h  report_window.c  report_window.h  seaudit-report-service.in  seaudit-report.c  seaudit.c  seaudit.glade  seaudit.gladep  seaudit.h  seaudit_window.c  seaudit_window.h  toplevel.c  toplevel.h  utilgui.c  utilgui.h
sechecker/: Makefile  Makefile.am  main.cc  module.cc  module.hh  option.cc  option.hh  profile.cc  profile.hh  report.cc  report.hh  requirement.cc  requirement.hh  result.cc  result.hh  sechecker.cc  sechecker.hh  util.cc  util.hh
sechecker/lib/: Makefile.am  module.hh  profile.cc  profile.hh  report.cc  report.hh  requirement.hh  result.cc  result.hh  sechecker.cc  sechecker.hh  util.cc  util.hh
sechecker/modules/: Makefile.am  attribs_wo_types.cc  attribs_wo_types.hh  domain_and_file.cc  domain_and_file.hh  domains_wo_roles.cc  domains_wo_roles.hh  find_domains.cc  find_domains.hh  find_file_types.cc  find_file_types.hh  find_net_domains.cc  find_net_domains.hh  find_netif_types.cc  find_netif_types.hh  find_node_types.cc  find_node_types.hh  find_port_types.cc  find_port_types.hh  imp_range_trans.cc  imp_range_trans.hh  inc_mount.cc  inc_mount.hh  roles_wo_allow.cc  roles_wo_allow.hh  roles_wo_types.cc  roles_wo_types.hh  roles_wo_users.cc  roles_wo_users.hh  spurious_audit.cc  spurious_audit.hh  types_wo_allow.cc  types_wo_allow.hh  unused_attribs.cc  unused_attribs.hh  users_wo_roles.cc  users_wo_roles.hh
sechecker/modules/template/: profiles.readme
sechecker/profiles/: all-no-mls.profile  all.profile  analysis.profile  development.profile  sechecker.dtd
secmds/: Makefile.am  indexcon.cc  seinfo.c  sesearch.c
sediff/: Makefile  Makefile.am  remap_types_dialog.c  result_item_render.c  sediff_cli.c  utilgui.c  utilgui.h
share/: Makefile.am
src/: Makefile.am
src/apol/: Makefile.am  apol.i  class-perm-query.c  cond-simplify.c  constraint-query.c  perm-map.c  terule-query.c  type-query.c  types-relation-analysis.c
src/apol/java/: Makefile.am
src/apol/python/: Makefile.am
src/apol/tcl/: Makefile.am
src/apol/tests/: Makefile.am  icase_regex-tests.h  infoflow-tests.c
src/poldiff/: Makefile.am
src/poldiff/java/: Makefile.am
src/poldiff/python/: Makefile.am
src/poldiff/tcl/: Makefile.am
src/poldiff/tests/: Makefile.am  conditionals.h  libpoldiff-tests.h  rules-tests.c
src/polsearch/: Makefile.am  bool_parameter.cc  bool_query.cc  class_query.cc  common_query.cc  criterion.cc  level_parameter.cc  number_parameter.cc  parameter.cc  polsearch.i  polsearch_internal.hh  proof.cc  string_expression_parameter.cc  test.cc  user_query.cc  util.cc
src/polsearch/java/: Makefile.am
src/polsearch/python/: Makefile.am
src/polsearch/tcl/: Makefile.am
src/polsearch/tests/: Makefile.am  bool_query-tests.cc  user_query-tests.cc
src/qpol/python/: Makefile.am
src/qpol/tests/: Makefile.am  libqpol-tests.c  policy-features-tests.c
src/seaudit/: Makefile.am  filter-internal.c  filter-internal.h  libseaudit.map
src/seaudit/java/: Makefile.am
src/seaudit/python/: Makefile.am
src/seaudit/tcl/: Makefile.am
src/seaudit/tests/: Makefile.am
src/sefs/: Makefile.am  entry.cc  fcfile.cc
src/sefs/java/: Makefile.am
src/sefs/python/: Makefile.am
src/sefs/tcl/: Makefile.am
src/sefs/tests/: Makefile.am  fcfile-tests.cc
(+175 files in other folders)
